--- a/src/assets/components/fastpractice/block.css
+++ b/src/assets/components/fastpractice/block.css
@@ -8,6 +8,7 @@
   text-align: center;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
   margin: 10px;
+  
 }
 
 .block-img {
@@ -29,10 +30,14 @@
   background-color: #007bff;
   color: white;
   border: none;
-  padding: 5px 10px;
+  padding: 6px 10px;
   border-radius: 5px;
   cursor: pointer;
   margin: 5px;
+  background: #0F2027;  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, #2C5364, #203A43, #0F2027);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #2C5364, #203A43, #0F2027); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
 }
 
 .block-button:hover {
