--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,18 @@
 
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;700&family=Roboto:wght@300;400;700&display=swap');
+
+h1 {
+  font-family: 'Roboto', sans-serif;
+}
+p{
+  font-family: 'Poppins', sans-serif;
+}
 body {
   background-color: white; /* Or any light color */
   color: black;
   margin: 0px 0px;
   padding: 0px;
-  
+  font-family: 'Poppins', sans-serif;
 }
 
 
